# pscbfm

./: .gitmodules  CMakeLists.txt  README.md
projects/GPUScBFM_AB_Type/: CMakeLists.txt  FeatureNetwork.h  GPUScBFM_AB_Type.h  UpdaterGPUScBFM_AB_Type.cu  UpdaterGPUScBFM_AB_Type.h  cudacommon.hpp  mainCUDASimulatorGPUScBFM_AB_Type.cpp  testCorrectness.sh
src/pscbfm/: CRITICAL.cu  UpdaterGPUScBFM_AB_Type.cu  UpdaterGPUScBFM_AB_Type.h  cudacommon.hpp  graphColoring.tpp
tests/: LinearChain_l1024_n64.bfm  Ring_N6_n6.bfm  coloring-test-Hydrogel_HEP_3__PEG_3_NStar_117__NoPerXYZ64_Connected.bfm  resultNormPscBFM.seeds
